--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             </div>
           </nav>
           
+
+          <h1 style="font-weight: bold; margin-top: 60px;">Capodanno 2024/25</h1>
+
         <div id="section1" class="container-fluid bg-transparent text-white" style="padding:100px 20px;">
             <h1>Ora e Luogo</h1>
             <p>la festa si terrà a casa di Tommaso il 31 dicembre 2024</p>
