--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h4 style="margin-top: 30px;">Cibo</h4>
             <ul>
                 <li>Patatine(classiche)</li>
-                <li>Stuzichi aperitivo</li>
+                <li>Stuzzichini aperitivo</li>
             </ul>
 
             <h4>Bevande anacoliche</h4>
